--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,7 @@ body::before {
   position: fixed;
   background: #e96565 url("../img/bg9.jpg") top right no-repeat;
   background-size: cover;
+  background-repeat: no-repeat;
   left: 0;
   right: 0;
   top: 0;
@@ -210,7 +211,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Poppins", sans-serif;
   font-size: 16px;
   font-weight: 400;
-  color: rgb(235, 221, 221);
+  color: rgb(231 80 80);
   white-space: nowrap;
   transition: 0.3s;
 }
@@ -240,14 +241,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
-  color: rgb(10, 10, 10);
+  color: #18d26e;
 }
 
 /**
 * Mobile Navigation 
 */
 .mobile-nav-toggle {
-  color: #fff;
+  color: rgb(187, 62, 62);
   font-size: 28px;
   cursor: pointer;
   display: none;
